test/valid/58196_records_equals/records_equals.mag
-- Author: 58196, Pedro Lopes

-- Check how records are evaluated by the == operator
-- NOTE: THE EXPECT RESULTS NEED TO BE CHEKED TO CONFIRM IF THEY'RE
-- INLINE WITH THE EXPECTED BEAHVIOUR

const s1 : {x: Int, y: String, z: Bool} = {x = 12, y = "string1", z = true}
const s2 : {z: Bool, x: Int, y: String} = {z = true, x = 12, y = "string1"}
const s3 : {z: Int, x: String, y: Bool} = {z = 12, x = "string1", y = true}
const s4 : {x: String, y: Bool, z: Int} = {x = "string1", y = true, z = 12}


fun main (_) : Unit -> Unit = 
  print(s1 == s2);
  print(s1 == s3);
  print(s1 == s4)